src/App.css
html {
  scroll-behavior: smooth;
}

.App {
  text-align: center;
}

.menu {
  position: absolute;
  display: block;
  top: 10px;
  left: 10px;
}

.menu__button {
  position: fixed;
  background-color: #61dafb;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
  font-size: 25px;
  z-index: 1;
}

.menu__content {
  display: none;
  position: fixed;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 2;
}

.menu__content__link {
  padding: 12px 16px;
  display: block;
}

.menu__content__link:hover {
  background-color: #f1f1f1;
}

.menu:hover .menu__content {
  display: block;
}

.menu:hover .menu__button {
  background-color: #61dafb;
}

.section {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: #f1f1f1;
}

.profile {
  border-radius: 5px;
  max-height: 150px;
  margin-top: 10px;
}

.about__grid {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  align-content: center;
  align-items: center;
  grid-gap: 5px;
  background-color: white;
  padding: 5px;
  border-radius: 5px;
}

.logo {
  max-width: 100px;
}

.profile:hover,
.logo:hover {
  opacity: 0.5;
}

.arrow {
  background-color: #61dafb;
  text-align: center;
  font-size: 35px;
  color: f1f1f1;
  width: 50px;
  height: 50px;
  border-radius: 10%;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  margin-bottom: -300px;
}

.menu__content__link,
.arrow__link,
.contact__link {
  color: black;
  text-decoration: none;
}

.arrow {
  color: #f1f1f1;
  animation-name: arrow;
  animation-timing-function: linear;
}
@keyframes arrow {
  0%   { transform: translateY(0); }
  50%  { transform: translateY(-30px); }
  100% { transform: translateY(0); }
}

.App-link {
  color: #61dafb;
}

.contact__list__li {
  list-style: none;
}

.footer {
  padding: 50px;
  background-color: #61dafb;
  color: #f1f1f1;
}

@media screen and (max-width: 900px) {
  .about__grid {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media screen and (max-width: 600px) {
  .about__grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

